[gd_scene load_steps=8 format=3 uid="uid://c2m3xgi4ngyao"]

[ext_resource type="Shader" uid="uid://cuqy8y8vmrin7" path="res://shaders/distorted_background.gdshader" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://dcwye4nb25wld" path="res://scripts/main.gd" id="1_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cbna67o8yxxrl" path="res://scenes/stock_and_waste.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://blxdvbdlwsux" path="res://scenes/foundation.tscn" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://h3r2odapwqpq" path="res://scenes/tableau.tscn" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://54k05ynvvgaf" path="res://assets/game_rules.jpg" id="6_tefeu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tbgi4"]
shader = ExtResource("1_jyhfs")
shader_parameter/colour1 = Color(0, 0.392157, 0, 1)
shader_parameter/colour2 = Color(0, 0.501961, 0, 1)
shader_parameter/colour3 = Color(0.196078, 0.803922, 0.196078, 1)
shader_parameter/colour4 = Color(0.235294, 0.701961, 0.443137, 1)
shader_parameter/contrast = 5
shader_parameter/gradual = 2.0
shader_parameter/width1 = 0.04
shader_parameter/width2 = 0.1
shader_parameter/scale1 = 10.0
shader_parameter/scale2 = 1.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/intensity = 0.2
shader_parameter/spin_speed = 0.2
shader_parameter/spin_amount = 1.5

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbgi4")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tbgi4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardTable" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="CardTable"]
custom_minimum_size = Vector2(760, 500)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CardTable/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StockAndWaste" parent="CardTable/HBoxContainer/HBoxContainer" node_paths=PackedStringArray("cards_control") instance=ExtResource("2_0wfyh")]
layout_mode = 2
size_flags_horizontal = 0
cards_control = NodePath("../../../../Cards")

[node name="Foundation" type="HBoxContainer" parent="CardTable/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 24

[node name="FoundationDiamonds" parent="CardTable/HBoxContainer/HBoxContainer/Foundation" instance=ExtResource("3_jyhfs")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
suit = "diamonds"
suit_color = Color(1, 0, 0, 0.392157)

[node name="FoundationClubs" parent="CardTable/HBoxContainer/HBoxContainer/Foundation" instance=ExtResource("3_jyhfs")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
suit = "clubs"
suit_color = Color(0, 0, 0, 0.392157)

[node name="FoundationHearts" parent="CardTable/HBoxContainer/HBoxContainer/Foundation" instance=ExtResource("3_jyhfs")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
suit = "hearts"
suit_color = Color(1, 0, 0, 0.392157)

[node name="FoundationSpades" parent="CardTable/HBoxContainer/HBoxContainer/Foundation" instance=ExtResource("3_jyhfs")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
suit = "spades"
suit_color = Color(0, 0, 0, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="CardTable"]
layout_mode = 2

[node name="Tableau_group" type="HBoxContainer" parent="CardTable/MarginContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 24

[node name="Tableau" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2

[node name="Tableau2" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
group_index = 1

[node name="Tableau3" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
group_index = 2

[node name="Tableau4" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
group_index = 3

[node name="Tableau5" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
group_index = 4

[node name="Tableau6" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
group_index = 5

[node name="Tableau7" parent="CardTable/MarginContainer/Tableau_group" instance=ExtResource("3_sugp2")]
custom_minimum_size = Vector2(88, 124)
layout_mode = 2
group_index = 6

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Win" type="Label" parent="UI"]
visible = false
custom_minimum_size = Vector2(40, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.752941, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.752941, 0, 1)
theme_override_font_sizes/font_size = 48
text = "胜利！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Top" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2

[node name="GameRules" type="Button" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "调整游戏难度（简单/困难）"
theme_override_font_sizes/font_size = 24
text = "游戏规则"

[node name="Difficulty" type="Button" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "调整游戏难度（简单/困难）"
theme_override_font_sizes/font_size = 24
text = "游戏难度:简单"

[node name="Start" type="Button" parent="UI/Top"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "开始游戏"

[node name="Tips" type="Button" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "获取提示
简单难度下提示数量无限制
困难难度下最多5次提示机会"
theme_override_font_sizes/font_size = 24
text = "提示"

[node name="Cancel" type="Button" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "撤销上一步操作
简单难度下撤销数量无限制
困难难度下最多5次撤销机会"
theme_override_font_sizes/font_size = 24
text = "撤销"

[node name="Exits" type="Button" parent="UI/Top"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "退出游戏"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI"]

[node name="GameRules" type="CenterContainer" parent="UI"]
visible = false
top_level = true
z_index = 100
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameRules"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/GameRules/VBoxContainer"]
custom_minimum_size = Vector2(1100, 600)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_tefeu")
expand_mode = 1

[node name="Button" type="Button" parent="UI/GameRules/VBoxContainer"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "确定"

[node name="Cards" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="UI/Top/GameRules" to="." method="_on_game_rules_button_pressed"]
[connection signal="pressed" from="UI/Top/Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="pressed" from="UI/Top/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Top/Tips" to="." method="_on_tips_pressed"]
[connection signal="pressed" from="UI/Top/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="UI/Top/Exits" to="." method="_on_exits_pressed"]
[connection signal="pressed" from="UI/GameRules/VBoxContainer/Button" to="." method="_on_game_rules_button_confirm_pressed"]
